fix(@dpc-sdp/ripple-ui-core): don't set background when higher contrast is requested

--- a/packages/ripple-ui-core/src/components/layout/RplLayout.css
+++ b/packages/ripple-ui-core/src/components/layout/RplLayout.css
@@ -34,8 +34,8 @@
   }
 }
 
-.rpl-layout--alt {
-  .rpl-layout__body-wrap {
+@media not (prefers-contrast: more) {
+  .rpl-layout--alt .rpl-layout__body-wrap {
     background-color: var(--rpl-clr-neutral-100);
   }
 }
